# molly-evolve

./: .gitignore  7b_comparison_results.txt  7b_comparison_v2_results.txt  Dockerfile  README.md  dashboard.py  molli_course_notes.tex  molli_onepager.tex  pyproject.toml  requirements.txt  run_extended.py  setup.py
architecture/: concept.md  formal_math.md  roadmap.md  transformer_gene_map.md
csrc/: gene_scoring.cpp  gene_scoring_cuda.cu  molly_ops.cpp  quantize.cpp  quantize_cuda.cu  repair.cpp  repair_cuda.cu  utils.h
csrc/llama/: CMakeLists.txt  genome_gguf.cpp  genome_gguf.h  llama_gene_convert.cpp  llama_gene_convert.h
experiments/: benchmark_fast_scoring.py  benchmark_granularity.py  benchmark_methods.py  benchmark_optimized.py  benchmark_qlora.py  benchmark_scaling.py  benchmark_speed.py  full_comparison.py  gpt2_gene_conversion.py  iterative_evolution.py  prototype_encoding.py
notes/biology/: amazon_molly_summary.md
paper/: outline.md
scripts/: convert_to_gguf.sh  deploy_runpod.py  install.sh  runpod_setup.sh
src/gene_conversion/: __init__.py  encoding.py  transformer_genome.py
src/molly_evolution/: __init__.py  cli.py  data.py  distributed.py  genome.py  llama_bridge.py  scoring.py  trainer.py
src/molly_evolution/methods/: __init__.py  base.py  gene_conv.py  lora.py  qlora.py
tests/: conftest.py  dry_run.py  test_cuda_ops.py  test_genome.py  test_scoring.py  test_stability.py  test_trainer.py
